--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,1 +1,4 @@
-<p>git-form works!</p>
+<form action="">
+    <input type="text" id="username" placeholder="username">
+    <button type="submit">submit</button>
+</form>
