--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,4 +1,7 @@
-<form action="">
-    <input type="text" id="username" placeholder="username">
+<form action="" class="search-form" >
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="username">
+
+    </div>
     <button type="submit">submit</button>
 </form>
