--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,6 +1,6 @@
 <form action="" class="search-form" >
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="username">
+      <input type="search"[(ngModel)]="username"value="" id="username" name="username" class="form-control" placeholder="username">
 
     </div>
     <button type="submit">submit</button>
