add html code for displaying searched users profile

--- a/src/app/git-form/git-form.component.html
+++ b/src/app/git-form/git-form.component.html
@@ -1,11 +1,11 @@
 <div class="container">
- <form action="" class="search-form">
+ <form class="search-form">
         <div class="form-group">
             <input type="search" [(ngModel)]="username" value="" id="username" (keyUp)="searchUser()" name="username"
                 class="form-control" placeholder="username">
         </div>
     
-    </form>
+ </form>
     
 <!-- DISPLAY MY ALREADY DECLARED PROFILE AS WELL AS REPOS -->
 <!-- <div class="container" *ngIf="display">
