style the button

--- a/src/app/git-form/git-form.component.css
+++ b/src/app/git-form/git-form.component.css
@@ -1,3 +1,17 @@
 .search-form{
     padding-top: 40px;
 }
+.search-form button{
+    margin: 10px;
+    padding: 10px;
+    width: 100px;
+    /* background-color: white; */
+    border:2px solid #007BFF;
+    
+}
+button:hover{
+    /* background-color: #007BFF; */
+    background: #007BFF;
+    color: white;
+    cursor: pointer;
+}
